[package]
name = "opensky_api"
version = "0.1.4"
authors = ["Luke Newcomb <newcomb.luke@protonmail.com>"]
description = "A simple Rust wrapper library around the OpenSky Network API"
license = "MIT"
edition = "2021"
repository = "https://github.com/newcomb-luke/opensky_api.rs"

[dependencies]
reqwest = { version = "0.12.9", features = ["stream"] }
thiserror = "2.0.6"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
log = "0.4.22"
directories = "5.0.1"
tokio = { version = "1.42.0", features = ["full"] }
csv = "1.3.1"
indicatif = "0.17.9"
futures-util = "0.3.31"
material-icons = "0.2.0"

[dev-dependencies]
env_logger = "0.11.5"
colored = "2.1.0"
chrono = { version = "0.4.39", features = ["alloc"] }
dotenv = "0.15.0"
